examples/test/testpolicy2294.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2294
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key13: value6
      key49: value46
      key40: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value32
          key41: value4
          key22: value13
      podSelector:
        matchLabels:
          key2: value17
          key5: value47
          key30: value41
